site collapsing solved: min width in the body needed to be set

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
  min-height: 100vh;
+ min-width: 150vh;
  margin:0;
  display:flex;
  flex-direction:column;
